force-app/main/default/objects/Interview_Feedback__c/Interview_Feedback__c.object-meta.xml
<CustomObject>
    <description>Core object for storing comprehensive interview feedback data with ratings, comments, and analysis</description>
    <label>Interview Feedback</label>
    <nameField>
        <displayFormat>IF-{00000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>