force-app/main/default/objects/Interview_Feedback__c/fields/Areas_For_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Areas_For_Improvement__c</fullName>
    <description>Areas identified for improvement and development</description>
    <label>Areas For Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>