force-app/main/default/objects/Interview_Feedback__c/fields/Communication_Rating__c.field-meta.xml
<CustomField>
    <fullName>Communication_Rating__c</fullName>
    <description>Communication skills rating on a scale of 1-5</description>
    <label>Communication Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>