force-app/main/default/objects/Interview_Feedback__c/fields/Cultural_Fit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Fit_Rating__c</fullName>
    <description>Cultural fit rating on a scale of 1-5</description>
    <label>Cultural Fit Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>