force-app/main/default/objects/Interview_Feedback__c/fields/Detailed_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Feedback__c</fullName>
    <description>Detailed feedback notes and observations from the interview</description>
    <label>Detailed Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>