force-app/main/default/objects/Interview_Feedback__c/fields/Feedback_Source__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Source__c</fullName>
    <description>Source of the feedback (self-assessment, interviewer, third party)</description>
    <label>Feedback Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Assessment</fullName>
                <default>true</default>
                <label>Self Assessment</label>
            </value>
            <value>
                <fullName>Interviewer</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>