force-app/main/default/objects/Interview_Feedback__c/fields/Feedback_Status__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Status__c</fullName>
    <description>Current status of the feedback record</description>
    <label>Feedback Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>