force-app/main/default/objects/Interview_Feedback__c/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <description>Date and time when the interview was conducted</description>
    <label>Interview Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>