force-app/main/default/objects/Interview_Feedback__c/fields/Interview_Round__c.field-meta.xml
<CustomField>
    <fullName>Interview_Round__c</fullName>
    <description>Interview round identifier (e.g., Phone Screen, Technical Round 1, Final Interview)</description>
    <label>Interview Round</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>