force-app/main/default/objects/Interview_Feedback__c/fields/Interviewer_Email__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Email__c</fullName>
    <description>Email address of the interviewer for follow-up communication</description>
    <label>Interviewer Email</label>
    <type>Email</type>
</CustomField>