force-app/main/default/objects/Interview_Feedback__c/fields/Interviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Name__c</fullName>
    <description>Name of the interviewer who conducted this interview</description>
    <label>Interviewer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>