force-app/main/default/objects/Interview_Feedback__c/fields/Is_Confidential__c.field-meta.xml
<CustomField>
    <fullName>Is_Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to mark feedback as confidential and restrict sharing</description>
    <label>Is Confidential</label>
    <type>Checkbox</type>
</CustomField>