force-app/main/default/objects/Interview_Feedback__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <description>Link to the Job Application this feedback relates to</description>
    <label>Job Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Interview Feedbacks</relationshipLabel>
    <relationshipName>Interview_Feedbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>