force-app/main/default/objects/Interview_Feedback__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <description>Overall interview rating on a scale of 1-5</description>
    <label>Overall Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>