force-app/main/default/objects/Interview_Feedback__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <description>Final recommendation based on interview performance</description>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strong Hire</fullName>
            </value>
            <value>
                <fullName>Hire</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>No Hire</fullName>
            </value>
            <value>
                <fullName>Strong No Hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>