force-app/main/default/objects/Interview_Feedback__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <description>Identified strengths and positive aspects from the interview</description>
    <label>Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>